--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Nepal-Watch Tv shows Online, Watch Movies Online </title>
-    <link rel="icon" href="images/netflix-logo-png-2616.png">
+    <link rel="icon" href="netflix-logo-png-2616.png">
     <link rel="stylesheet" href="netflix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <div class="landingPage">
         <div class="nav relative">
             <ul  style=" display:flex; flex-direction:inline-flex;justify-content: space-between; margin:30px">
-                <li><img src="images/netflix-logo-png-2562.png" alt="logo" class="logo"></li>
+                <li><img src="netflix-logo-png-2562.png" alt="logo" class="logo"></li>
                 <li><button class="signIn">Sign In</button></li>
             </ul>
     </div>
@@ -36,12 +36,12 @@
           <li><h1>Enjoy on your TV.</h1></li>
           <li>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</li>
           </ul>
-        <img src="images/WfVA.gif" alt="tv-gif" style="float:right;" class="downloads">
+        <img src="WfVA.gif" alt="tv-gif" style="float:right;" class="downloads">
         
       </div>
       <div class="border"></div>
      <div class="flex box paragraph">
-      <img src="images/mobile-0819.jpg" alt="" style="float:left;" class="downloads">
+      <img src="mobile-0819.jpg" alt="" style="float:left;" class="downloads">
 
       <ul style="flex-direction:column; justify-content: space-between;">
          <li> <h1>Download your shows to watch offline.</h1></li> 
@@ -58,7 +58,7 @@
 </div>
 <div class="border"></div>
 <div class="flex box paragraph">
-  <img src="images/AAAABfpnX3dbgjZ-Je8Ax3xn0kXehZm_5L6-xe6YSTq_ucht9TI5jwDMqusWZKNYT8DfGudD0_wWVVTFLiN2_kaQJumz2iivUWbIbAtF.png" alt="" style="float:left" class="downloads">
+  <img src="AAAABfpnX3dbgjZ-Je8Ax3xn0kXehZm_5L6-xe6YSTq_ucht9TI5jwDMqusWZKNYT8DfGudD0_wWVVTFLiN2_kaQJumz2iivUWbIbAtF.png" alt="" style="float:left" class="downloads">
   <ul style="flex-direction:column; justify-content:space-between;">
   <li><h1>Create profiles for kids.
   </h1></li>
