--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
 
   </ul>
   <div class="finale">
-  <p>Ready to watch? Enter your email to create or restart your membership</p>
-  <p><input type="text" placeholder="Email address"></p>
-  <button>Get Started ></button>
+  <button><a href="mailto:anmolkhatiwada8@gmail.com" style="text-decoration:none; color:white">Contact me!</a></button>
   </div>
 </div>
 <script>
